wdvp - fix overflow

--- a/src/components/Articles/WDVP/WDVPBars.scss
+++ b/src/components/Articles/WDVP/WDVPBars.scss
@@ -23,7 +23,8 @@ $main-color: #30336b;
     }
 
     &__controls {
-        flex: 0 0 19em;
+        flex: none;
+        width: 15em;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -41,7 +42,8 @@ $main-color: #30336b;
         flex: none;
         display: flex;
         align-items: center;
-        padding: 0.8em 0.7rem;
+        flex-wrap: wrap;
+        padding: 0.5em 0.7rem;
     }
     &__toggle {
         padding: 0.3rem;
@@ -146,6 +148,7 @@ $main-color: #30336b;
     &__chart {
         position: relative;
         flex: 1;
+        overflow: hidden;
     }
 
     .RadioGroup {
@@ -160,6 +163,8 @@ $main-color: #30336b;
     }
 
     &Chart {
+        width: 100%;
+
         &__label {
             display: flex;
             align-items: center;
